@@ -117,6 +117,7 @@
 #define CONTROL_DISPLAY_WARP 1354
 #define CONTROL_WARPSTICKY 667
 #define CONTROL_WARPSHADED 668
+#define CONTROL_WARPICONIFIED 669
 #define CONTROL_WARP_AFTER_NEXT_FOCUS 1355
 #define CONTROL_PAGER_SCANSPEED 1356
 #define CONTROL_ICONTEXT 1357
