@@ -326,6 +326,7 @@ static char         tmp_raise_after_focus;
 static char         tmp_display_warp;
 static char         tmp_warpsticky;
 static char         tmp_warpshaded;
+static char         tmp_warpiconified;
 static char         tmp_clickalways;
 
 static void         CB_ConfigureFocus(int val, void *data);
@@ -346,6 +347,7 @@ CB_ConfigureFocus(int val, void *data)
 	mode.display_warp = tmp_display_warp;
 	mode.warpsticky = tmp_warpsticky;
 	mode.warpshaded = tmp_warpshaded;
+	mode.warpiconified = tmp_warpiconified;
 #endif /* WITH_TARTY_WARP */
 	mode.clickalways = tmp_clickalways;
 	FixFocus();
@@ -380,6 +382,7 @@ SettingsFocus(void)
    tmp_display_warp = mode.display_warp;
    tmp_warpsticky = mode.warpsticky;
    tmp_warpshaded = mode.warpshaded;
+   tmp_warpiconified = mode.warpiconified;
 #endif /* WITH_TARTY_WARP */
    tmp_clickalways = mode.clickalways;
 
@@ -523,6 +526,15 @@ SettingsFocus(void)
    DialogItemCheckButtonSetText(di, _("Include shaded windows in focus list"));
    DialogItemCheckButtonSetState(di, tmp_warpshaded);
    DialogItemCheckButtonSetPtr(di, &tmp_warpshaded);
+
+   di = DialogAddItem(table, DITEM_CHECKBUTTON);
+   DialogItemSetPadding(di, 2, 2, 2, 2);
+   DialogItemSetFill(di, 1, 0);
+   DialogItemSetColSpan(di, 2);
+   DialogItemCheckButtonSetText(di,
+				_("Include iconified windows in focus list"));
+   DialogItemCheckButtonSetState(di, tmp_warpiconified);
+   DialogItemCheckButtonSetPtr(di, &tmp_warpiconified);
 
    di = DialogAddItem(table, DITEM_CHECKBUTTON);
    DialogItemSetPadding(di, 2, 2, 2, 2);
